Fixed mobile version about page

--- a/src/scss/_galleryPage.scss
+++ b/src/scss/_galleryPage.scss
@@ -28,7 +28,7 @@
   padding: 20px;
   box-shadow: 0px 0px 20px $primaryBoxShadowColor;
   @include tablet {
-    margin: 80px 0;
+    margin: 50px 0 80px;
   }
 }
 
