added hover effect for nav

--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -134,6 +134,31 @@ li {
             margin-left: -50px;
             gap: 40px;
         }
+
+        .navLink {
+            position: relative; 
+            text-decoration: none;
+            color: $tertiaryColor;
+            display: flex;
+            justify-content: center;
+            transition: color 0.3s ease;
+            
+            &:hover::after {
+                content: "";
+                position: absolute;
+                display: flex;
+                bottom: -9px; 
+                left: 50%;
+                transform: translateX(-50%);
+                width: calc(100%); 
+                padding: 5px 15px;
+                height: 30px; 
+                background-color: #f0f0f0; 
+                border-radius: 30px; 
+                border-bottom: 0px;  
+                transition: all 0.3s ease; 
+            }
+        }
     }
 }
 } 
