Added logic for navigation

--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -65,23 +65,6 @@ li {
     justify-content: center;
     transition: color 0.3s ease;
     position: relative;
-
-    &:hover::after {
-        content: "";
-        position: absolute;
-        display: flex;
-        bottom: -9px; 
-        left: 50%;
-        transform: translateX(-50%);
-        width: calc(100%); 
-        padding: 5px 15px;
-        height: 30px; 
-        background-color: #f0f0f0; 
-        border-radius: 30px; 
-        border-bottom: 0px;  
-        transition: all 0.3s ease; 
-        animation: slideBounce 0.4s ease-in-out;
-    }
 }
 
 
@@ -108,7 +91,6 @@ li {
     background-color: #ffffff; 
     border-radius: 30px; 
     border-bottom: 0px; 
-    animation: slideBounce 0.4s ease-in-out;
 
     }
 
@@ -152,7 +134,36 @@ li {
             margin-left: -50px;
             gap: 40px;
         }
+
+        .navLink {         
+            
+            &:hover::after {
+                cursor: pointer;
+                content: "";
+                position: absolute;
+                display: flex;
+                bottom: -9px; 
+                left: 50%;
+                transform: translateX(-50%);
+                width: calc(100%); 
+                padding: 5px 15px;
+                height: 30px; 
+                background-color: #f0f0f0; 
+                border-radius: 30px; 
+                border-bottom: 0px;  
+      
+
+                @include desktop {
+                    bottom: -6px; 
+                    }
+                
+                    @include desktop-large {
+                        bottom: -1px; 
+                        }
+
+            }
+            
+        }
     }
 }
-} 
-
+}
