--- a/src/scss/_homePage.scss
+++ b/src/scss/_homePage.scss
@@ -83,7 +83,7 @@ article {
         .expertise-1, .expertise-2, .expertise-3 {
             padding: 20px;
             width: 80vw;
-            height: 150px;
+            min-height: 150px;
             margin: 20px;
             background-color: $primaryColor;
             box-shadow: 0px 0px 10px $primaryBoxShadowColor;
@@ -93,17 +93,19 @@ article {
 
             @include tablet {
                 display:block;
-                margin: 20px;
+                margin: 15px;
+                padding: 20px 5px;
                 width: 220px;
-                height: 300px;
+                min-height: 300px;
                 text-align: center;
             }
 
             @include desktop {
                 display:block;
+                padding: 20px;
                 margin: 40px;
                 width: 300px;
-                height: 370px;
+                min-height: 370px;
               
             }
 
@@ -136,6 +138,19 @@ article {
                 }
             }
 
+            .expertise-div {
+                display: flex;
+                justify-content: center;
+                padding-top: 15px;
+                flex-direction: column;
+
+                @include tablet {
+                    display: block;
+                    padding-top: 0px;
+                }
+
+            }
+
             .expertise-title {
                 margin-left: 20px;
 
@@ -153,6 +168,7 @@ article {
         
         @include tablet {
             flex-direction: row;
+            max-width: 100vw;
         }
     
     }
