--- a/src/scss/_galleryPage.scss
+++ b/src/scss/_galleryPage.scss
@@ -32,6 +32,21 @@
   }
 }
 
+.gallery-container1 {
+  background-color: $primaryColor;
+  border-radius: 10px;
+  margin: 30px 0 50px;
+  width: 85vw;
+  padding: 20px;
+  padding-bottom: 35vw;
+  box-shadow: 0px 0px 20px $primaryBoxShadowColor;
+  @include tablet {
+    margin: 50px 0 80px;
+    padding: 20px;
+    padding-bottom: 10px;
+  }
+}
+
 .gallery-header {
   display: flex;
   flex-direction: column;
@@ -82,6 +97,9 @@
   .gallery-subheading {
     color: $quaternaryColor;
     padding-top: 5px;
+    text-align: center;
+    display: flex;
+    justify-items: center;
   }
 }
 
